css/main.css
html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

/* Typography ---------- ---------- ---------- */
body {
    font-family: "Inconsolata", "Helvetica Neue", sans-serif;;
}

h1 {
    font-family: "heading", "Helvectica Neue", serif;
    font-size: 58px;
}

p {
    font-size: 14px;
}

li {
    font-size: 16px;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #000;
}

.hero-container h1 {
    display: inline-block;
    padding: 0 8px 4px 8px;
    margin-top: 21vh;
    background-color: #FFF;
}

@media (min-height: 815px) {
    .hero-container h1 {
        margin-top: 28vh;
    }
}

.hero-paragraph {
    background-color: #FFF;
    display: block;
    line-height: 1.9;
    margin: 0 auto 0 58%;
    max-width: 290px;
    padding: 3px 0 3px 8px;
    text-align: left;
}

/* Layout ---------- ---------- ---------- */

.outer-container {
    margin: 0 auto;
}

.hero-container {
    height: 100vh;
    text-align: center;
    animation: fadein 3s;
}

header {
    padding: 50px 0 0 70px;
}

header p {
    text-align: left;
}

.hero-pink-rectangle {
    background-color: #FFE9CD;
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 50vw;
    z-index: -99;
}

.left-hero-image {
    max-width: 275px;
    position: absolute;
    margin: auto;
    top: -80px;
    bottom: 0;
    right: 700px;
    left: 0;
    z-index: -1;
}

.center-hero-image {
    max-width: 400px;
    position: absolute;
    margin: auto;
    top: 220px;
    bottom: 0;
    right: 200px;
    left: 0;
    z-index: -1;
}

.right-hero-image {
    max-width: 340px;
    position: absolute;
    margin: auto;
    top: 20px;
    bottom: 300px;
    right: -640px;
    left: 0;
    z-index: -1;
}

.light-image {
    max-width: 56px;
    position: absolute;
    margin: auto;
    top: -36px;
    left: 0;
    right: 0;
}

.vine-image {
    display: none;
    max-width: 320px;
    position: absolute;
    margin: auto;
    top: -10px;
    left: 0;
    right: 400px;
    z-index: -1;
}


@media (min-height: 815px) {
    .vine-image {
        display: inherit;
    }
}


.diamonds-image {
    position: absolute;
    margin: auto;
    top: 400px;
    bottom: 0;
    left: 0;
    right: 590px;
}

/* Work ---------- ---------- ---------- */

.work-items-container h1 {
    margin-top: 100px;
    text-align: center;
}

.work-items-container ul {
    margin-bottom: 100px;
}

.work-items-container a {
    display: block;
}

.work-items-container li {
    margin: 0 auto;
    padding: 40px 20px;
    max-width: 900px;
    list-style: none;
}

.work-items-container li span:nth-child(2n) {
    float: right;
}

.work-items-container i {
    padding-left: 30px;
}

.work-items-container a:hover {
    background-color: #eee;
}

/* Footer ---------- ---------- ---------- */

footer {
    margin-top: 200px;
    height: 200px;
    position: relative;
    display: block;
}

.footer-image {
    position: relative;
    display: inherit;
    left: 44%;
    display: inline-block;
}


.footer-right-rectangle {
    background-color: #FFE9CD;
    position: absolute;
    bottom: -30px;
    right: 0;
    height: 300px;
    width: 50%;
    z-index: -99;
}

.footer-left-rectangle {
    background-color: #EEE;
    position: absolute;
    bottom: -30px;
    left: 0;
    height: 180px;
    width: 54%;
    z-index: -99;
}

.footer-right-rectangle ul {
    position: absolute;
    bottom: 25%;
    right: 35%;
}

.footer-left-rectangle a {
    position: absolute;
    display: inline-block;
    bottom: 40%;
    left: 35%;
}

.footer-right-rectangle li {
    list-style: none;
    margin: 10px 0;
    cursor: pointer;
}

.footer-right-rectangle a {
    min-width: 150px;
    display: inline-block;
}

.footer-right-rectangle i {
    padding-left: 40px;
    float: right;
}

